# LLM-Key-Guard

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
llm_key_guard/: __init__.py  __main__.py  banners.py  cli.py  reporter.py  revoker.py  utils.py  validator.py
llm_key_guard/detectors/: __init__.py  patterns.py
llm_key_guard/exporter/: __init__.py  html_exporter.py
llm_key_guard/scanner/: __init__.py  ci_parser.py  filesystem.py  git_history.py  slack.py
